--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 	"peerDependencies": {
 		"tirne": ">= 1.3.0"
 	},
+	"dependencies": {
+		"jose": "^5.0.0",
+		"@sinclair/typebox": "^0.32.0"
+	},
 	"devDependencies": {
 		"@types/bun": "1.1.14",
 		"tirne": "1.3.9-beta.12",
@@ -34,7 +38,8 @@
 	"keywords": [
 		"vafast",
 		"jwt",
-		"authentication"
+		"authentication",
+		"tirne"
 	],
 	"repository": {
 		"type": "git",
