--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "bun run --watch example/index.ts",
-		"test": "bun test && npm run test:node",
-		"test:node": "npm install --prefix ./test/node/cjs/ && npm install --prefix ./test/node/esm/ && node ./test/node/cjs/index.js && node ./test/node/esm/index.js",
+		"test": "bun test",
 		"build": "bun build.ts",
 		"release": "npm run build && npm run test && npm publish --access public"
 	},
 	"peerDependencies": {
-		"tirne": ">= 1.3.0"
+		"vafast": ">= 0.1.12"
 	},
 	"dependencies": {
 		"jose": "^5.0.0",
@@ -19,7 +18,6 @@
 	},
 	"devDependencies": {
 		"@types/bun": "1.1.14",
-		"tirne": "1.3.9-beta.12",
 		"eslint": "9.6.0",
 		"tsup": "^8.1.0",
 		"typescript": "^5.5.3"
@@ -38,8 +36,7 @@
 	"keywords": [
 		"vafast",
 		"jwt",
-		"authentication",
-		"tirne"
+		"authentication"
 	],
 	"repository": {
 		"type": "git",
