--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsup",
 		"dev": "npx tsx watch example/index.ts",
 		"test": "npx vitest run",
-		"release": "npx np"
+		"release": "npm run build && npm run test && npx bumpp && npm publish --access=public"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
