--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@vafast/jwt",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "Plugin for Vafast for JWT authentication",
 	"type": "module",
 	"license": "MIT",
@@ -42,7 +42,7 @@
 		"LICENSE"
 	],
 	"peerDependencies": {
-		"vafast": ">=0.3.11"
+		"vafast": "^0.5.1"
 	},
 	"dependencies": {
 		"@sinclair/typebox": "^0.32.0",
@@ -53,7 +53,7 @@
 		"rimraf": "^6.0.1",
 		"tsdown": "^0.19.0-beta.4",
 		"typescript": "^5.4.5",
-		"vafast": ">=0.3.11",
+		"vafast": "^0.5.1",
 		"vitest": "^4.0.16"
 	}
 }
